chore: add reference to Day01.Src

--- a/advent-of-code-2023/2024/Day01/Day01.Test/Day01.Test.csproj
+++ b/advent-of-code-2023/2024/Day01/Day01.Test/Day01.Test.csproj
@@ -24,6 +24,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Day01.Src\Day01.Src.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
 
