--- a/2023/Day01/tests/Day01.Test.csproj
+++ b/2023/Day01/tests/Day01.Test.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\src.csproj" />
+    <ProjectReference Include="..\src\Day01.Src.csproj" />
   </ItemGroup>
 
 </Project>
